# MP_Final_Project

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mpclass/projectmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  OpenCLDriver.cpp  OpenCV.cpp  native-lib.cpp  test.cpp
app/src/main/java/com/example/mpclass/projectmp/: CameraPreview.java  GrayScale.java  JNIDriver.java  JNIListener.java  MainActivity.java
app/src/main/res/drawable/: button.xml
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/mpclass/projectmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
